2008-10-29 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py: Add define_hosts() method.

2008-10-28 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py: Add
	--retry-login switch that allows for retrying the login procedure.

2008-10-24 Samuel Abels <http://debain.org>

	* src/Exscript/Account.py: Add 'release_before' signal.
	* src/Exscript/TerminalActions/Authenticate.py: Emit 'login_done' signal 
	on Authenticate class, no longer on the Account class.

2008-10-23 Samuel Abels <http://debain.org>

	* src/Exscript/TerminalActions/Authenticate.py, src/Exscript/Account.py: Add
	a 'login_done' signal to the Account class.

2008-10-22 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/AccountManager.py,
	src/Exscript/TerminalActions/Authenticate.py: Completed support for account
	pooling using the --acount-pool command line switch.

2008-10-21 Samuel Abels <http://debain.org>

	* all-over: Refactoring to support account pooling.

2008-10-21 Samuel Abels <http://debain.org>

	* src/Exscript/TemplateRunner.py: Passing a hostname to 
	TemplateRunner.__init__() is now unnecessary even if a template (or 
	template file) is passed.
	* src/Exscript/Interpreter/stdlib/Sys/run.py: Fix: Broken by last commit.
	* src/Exscript/Exscript.py: Cleanups.
	* exscript: Fix the --hosts argument.

2008-10-10 Samuel Abels <http://debain.org>

	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, exscript,
	src/Exscript/Interpreter/stdlib/Sys/run.py, src/Exscript/Job.py: Further
	refactoring to allow for executing scripts that do not open a remote 
	connection.
	* src/Exscript/Interpreter/Scope.py, src/Exscript/TemplateRunner.py: Allow
	for retrieving the variables from completed Exscript templates.

2008-10-09 Samuel Abels <http://debain.org>

	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, exscript, 
	src/Exscript/Interpreter/stdlib/Sys/run.py: Major refactoring of the top