@@ -1,3 +1,8 @@
+2008-10-30 Samuel Abels <http://debain.org>
+
+	* src/Exscript/Interpreter/Regex.py: Allow for embedding variables in 
+	regular expressions.
+
 2008-10-29 Samuel Abels <http://debain.org>
 
 	* src/Exscript/TemplateRunner.py: Add define_hosts() method.
